<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UserPreferencesActivity"
    >


    <Button
        android:id="@+id/saveUserPreferencesButton"
        android:text="@string/save_user_preferences_button_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#EFFFFF"
        android:background= "@drawable/button_style"
        android:onClick="saveUserPreferences"
        />

    <TextView
        android:id="@+id/wheelSizeTextView"
        android:text="@string/wheel_size_text_view"
        android:textColor="#EFFFFF"
        android:background="@drawable/text_view_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveUserPreferencesButton"
        android:layout_marginTop="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/desired_cadence_header"
        android:text="@string/desired_cadence_header"
        android:textColor="#EFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/desired_cadence"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="34dp"
        android:layout_marginEnd="34dp" />

    <TextView
        android:id="@+id/wheel_size_unit"
        android:text="@string/wheel_size_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_alignTop="@+id/wheelSizeEditText"
        android:layout_toRightOf="@+id/wheelSizeEditText"
        android:layout_toEndOf="@+id/wheelSizeEditText" />

    <TextView
        android:id="@+id/desired_cadence_unit"
        android:text="@string/cadence_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_above="@+id/bluetooth_device_text_view"
        android:layout_toRightOf="@+id/desired_cadence"
        android:layout_toEndOf="@+id/desired_cadence" />

    <EditText
        android:id="@+id/wheelSizeEditText"
        android:layout_width="30sp"
        android:maxLength="2"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/wheelSizeTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/desired_cadence"
        android:layout_width="45sp"
        android:maxLength="3"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/wheelSizeTextView"
        android:layout_alignLeft="@+id/desired_cadence_header"
        android:layout_alignStart="@+id/desired_cadence_header" />

    <TextView
        android:id="@+id/bluetooth_device_text_view"
        android:text="@string/bluetooth_device_instruction"
        android:textColor="#EFFFFF"
        android:background="@drawable/text_view_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wheelSizeEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp" />

    <ListView
        android:id="@+id/bluetoothDeviceListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bluetooth_device_text_view"
        />
</RelativeLayout>