<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.unb.bikex.MapTrackActivity">

    <Button
        android:id="@+id/startTrack"
        android:text="@string/start_track_button_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#EFFFFF"
        android:background= "@drawable/button_style"
        android:onClick="startTrack"
        />

    <TextView
        android:id="@+id/speed_header"
        android:text="@string/speed_header"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_below="@+id/startTrack"
        android:layout_alignRight="@+id/cadence_header"
        android:layout_alignEnd="@+id/cadence_header"
        android:layout_marginTop="29dp" />

    <TextView
        android:id="@+id/speed"
        android:text="0.0"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_alignTop="@+id/speed_header"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/cadence_header"
        android:text="@string/cadence_header"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_alignTop="@+id/cadence"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/cadence"
        android:text="0.0"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="82dp"
        android:layout_below="@+id/speed"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
